--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <script>
     const { createApp, ref, reactive, toRef } = Vue
-debugger
+
     let b = createApp({
       setup() {
         // const a = ref({ a: 1 })
@@ -34,8 +34,8 @@ debugger
         }
       }
     })
-   
-
+   console.log(b)
+debugger
     let c = b.mount('#app')
    
   </script>
